--- a/client/src/pages/Auth/Authentication.css
+++ b/client/src/pages/Auth/Authentication.css
@@ -56,6 +56,7 @@
     border-radius: 5px;
     margin-bottom: 2rem;
     display: flex;
+    align-items: center;
 }
 
 .ip-icon {
@@ -67,7 +68,8 @@
     background-color: #ededed;
 }
 
-.input-field input {
+.input-field input,
+.input {
     width: 100%;
     padding: 0.7rem 0.5rem;
     border: none;
@@ -77,15 +79,19 @@
     color: var(--grey-1);
     outline: none;
     transition: box-shadow 0.5s linear, border 0.1s ease-in-out;
+    white-space: pre-wrap;
 }
 
-.input-field input:focus {
+.input-field input:focus,
+.input:focus {
     box-shadow: var(--shadow-2);
     border-bottom: 3px solid var(--pri-900);
 }
 
 /* Applies for all input */
-input::placeholder {
+input::placeholder,
+.input::placeholder {
+    font-family: inherit;
     color: #aaa;
     font-weight: 300;
 }
@@ -148,16 +154,18 @@ input::placeholder {
     0% {
         transform: translateX(0);
     }
+
     50% {
         transform: translateX(-5px);
     }
+
     100% {
         transform: translateX(0);
     }
 }
 
 @media screen and (min-width: 767px) {
-    
+
     .login-container {
         width: 100%;
         margin: 6.5rem auto 0;
